web/src/main/webapp/includes/styles.css
#studiesDiv {
    margin-top: 5px;
    margin-bottom: 5px;
}



/*See: listSubjectDiscNote.jsp */
.downloadAllDNotes {
    margin-bottom:5px;
    margin-left:5px;

}

.listAllDNotes{
     margin-bottom:5px;

}
.subjDiscNoteTable{
    border: thin solid black;
}

.subjDiscNoteDivTitle{
   margin-bottom:5px; 
}
/*See: signStudySubject.jsp */
.subjDiscNoteDiv {
    margin-bottom:5px;
    margin-top:5px;

}

/*See: listSubjectDiscNote.jsp */
.dnKey {
    margin-bottom:5px;
    padding: 0.5em;
    border: thin solid black;
}

.summaryBox{
    float:left;
    margin-bottom:5px;
    padding: 0.5em;
    border: thin solid black;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    line-height: 15px;
    color: #4D4D4D;
}

/*See: chooseDownloadFormat.jsp */
#downloadDiv {
    margin:5px;
    padding: 0.5em;
    border: thin solid black;
}
.aka_revised_content{
    padding-left: 22px;
    padding-right: 36px;
    padding-top: 8px;
    padding-bottom: 18px;
    float:left;
/*width: 660px;*/
}

.aka_group_header{
    float:none;
    clear:both;
    margin-bottom: 0.6em;
}

.aka_revised_content_preview{
    padding-left: 22px;
    padding-right: 0px;
    padding-top: 8px;
    padding-bottom: 18px;

/*width: 660px;float:left;*/
}
.aka_font_general{
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    font-style: normal;
    font-weight: bold;
}

.aka_para{
    width: 50em;
}

.aka_green_highlight{
    color:#009966;
}

.aka_red_highlight{
    color:#ff0000;
}

.aka_err_message{
    border: 1px solid #c5c5c5;
    background: #ECECEC;
    width:450px;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    font-style: normal;
    font-weight: bold;
    color:  #ff0000;
/*color: #E46E16; */
}

.aka_exclaim_error{
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 2em;
    font-style: normal;
    font-weight: bold;
    color:  #ff0000;
}

.aka_exclaim_show{
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 2em;
    font-style: normal;
    font-weight: bold;
    color:  #006633;
}

.aka_input_error{
    border: 1px solid #ff0000;
}

.aka_input_show{
    border: 1px solid #006633;
}

.aka_group_show{
	background: #FFFF33;
	/* a butter color, tbh*/
    border: 1px solid green;
}

.aka_input_readonly{
	color: silver;
}

.aka_bodywidth{
    width:1024px;
    margin: 0 30px;
/* background-color: #CCCCCC*/
}

.aka_table_cell_left {
    padding: 0.2em;
    border-style: solid;
    border-top-width: 1px;
    border-left-width: 0px;
    border-right-width: 0px;
    border-bottom-width: 0px;
    border-top-color: #E6E6E6;
    vertical-align: top;
}

.aka_table_cell {
    padding: 0.2em;
    border-style: solid;
    border-top-width: 1px;
    border-left-width: 1px;
    border-right-width: 0;
    border-bottom-width: 0;
    border-left-color: #CCCCCC;
    border-top-color: #E6E6E6;
    vertical-align: top;
}

td .aka_revised {
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 0.7em;
    color: #4D4D4D;
}

.text_block {
    /*width: 10em; ticket #53*/
    float:left;
    text-align:right
}

.aka_text_block {
    /*width: 10em; ticket #53*/
    float:left;
    text-align:right
}

.aka_text_block_shared {
    float:left;
    width:10em;
    white-space:normal;
    padding-right:1px
}

.aka_ques_block {
    width: 2em;
    text-align:left
}

.aka_header_border{
    border: thin solid #999999;
    padding-top: 3px;
    padding-left: 6px;
    padding-right: 6px;
    padding-bottom: 3px;
    vertical-align: top;
}

.headerBackground{
    background: #ECECEC;}

.aka_headerBackground{
    background: #ECECEC;}

.aka_stripes{
    background-color: #ECECEC;
}

.aka_light_stripes{
    background: #f1f1f1;
}

.padding_large{
    padding-left: 0.6em;
    padding-right: 0.6em;
    padding-top: 0.6em;
    padding-bottom: 0.6em;
}

.aka_padding_large{
    padding-left: 0.6em;
    padding-right: 0.6em;
    padding-top: 0.6em;
    padding-bottom: 0.6em;
}

.smallText {
    font-size: 0.8em;
}

.aka_smallText {
    font-size: 0.8em;
}

.aka_title_submit{
    margin-top: 0.6em;
}

.aka_date_input {
    width: 6em;}

.date_input {
    width: 6em;}

.sm_txt_input {
    width: 8em;
}

.aka_sm_txt_input {
    width: 9em;
}

.aka_form_table {
/* width: 90%;*/
    border:2px solid #b0b0b0;
    border-collapse: collapse;
    margin-bottom: 2em}

.aka_form_table_section_header {
/* width: 90%;*/
    border:2px solid #b0b0b0;
    border-collapse: collapse;
}

.cellBorders {
    border:2px solid #b0b0b0;
/* white-space: nowrap*/
}

.padding_norm{
    padding: 0.2em;
}

.aka_cellBorders {
/*#b0b0b0*/
    border:2px solid #b0b0b0;
    white-space: nowrap
}

.aka_cellBorders_dark {
/*#b0b0b0*/
    border:2px solid #000000;
    white-space: nowrap
}

.aka_borderTopHidden{
    border-top: hidden;
}

.aka_borderBotHidden{
    border-bottom: hidden;
}

.aka_borderHidden{
    border: hidden;
}

.aka_padding_norm{
    padding-left: 0.2em;
    padding-right:  0.2em;
    padding-top:  0.2em;
    padding-bottom:  0.2em;
}
/* //////////////////////////////////////// */

H1 { font-family: Tahoma, Arial, Helvetica, sans-serif;
    font-size: 18px;
    line-height: 24px;
    font-weight: bold;
    color: #789EC5;
}

H2 { font-family: Tahoma, Arial, Helvetica, sans-serif;
    font-size: 18px;
    line-height: 24px;
    font-weight: bold;
    color: #CCCCCC;
}

H3 { font-family: Tahoma, Arial, Helvetica, sans-serif;
    font-size: 14px;
    line-height: 18px;
    font-weight: bold;
    color: #789EC5;
}

h4 { font-family: Tahoma, Arial, Helvetica, sans-serif;
    font-size: 18px;
    line-height: 24px;
    font-weight: bold;
    color: #E46E16;
}


p { font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    line-height: 15px;
    color: #4D4D4D;
}
/* ... */

